Agregué la posibilidad de escribir en la terminal o en el editor

--- a/src/webview/components/PupilKeyboard/Snippets/Snippets.css
+++ b/src/webview/components/PupilKeyboard/Snippets/Snippets.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 .snippets-section {
 	position: relative;
 	overflow-x: auto;
@@ -6,53 +6,53 @@
 }
 
 .snippets-button {
-  @apply py-2.5 px-5 text-sm font-medium text-gray-400
+	@apply py-2.5 px-5 text-sm font-medium text-gray-400
          focus:outline-none bg-white rounded-lg border border-gray-200
          hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100
          dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400
          dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700;
 
-  display: inline-flex;
-  align-items: center;   
-  justify-content: start; 
-  flex-shrink: 0; 
-  width: 200px;  
-  white-space: nowrap; 
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-right: 0.75rem;
-  margin-bottom: 0.5rem;
+	display: inline-flex;
+	align-items: center;
+	justify-content: start;
+	flex-shrink: 0;
+	width: 200px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	margin-right: 0.75rem;
+	margin-bottom: 0.5rem;
 }
 
 .snippets-container {
-    @apply py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900
+	@apply py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900
          focus:outline-none bg-white rounded-lg border border-gray-200
          hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100
          dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400
          dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700;
-    overflow-x: auto;
-    white-space: nowrap;
-    position: relative;
+	overflow-x: auto;
+	white-space: nowrap;
+	position: relative;
 }
 
 .overflow-button {
-        @apply !py-2.5 !px-5 !me-2 !mb-2 !text-sm !font-medium 
+	@apply !py-2.5 !px-5 !me-2 !mb-2 !text-sm !font-medium 
 						!text-gray-900 !bg-white !rounded-lg !border !border-gray-200 
 						hover:!bg-gray-100 hover:!text-blue-700 focus:!z-10 focus:!ring-4 focus:!ring-gray-100
 						dark:focus:!ring-gray-700 dark:!bg-gray-800 dark:!text-gray-400 
 						dark:!border-gray-600 dark:hover:!text-white dark:hover:!bg-gray-700;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 2;
-    background: rgba(0,0,0,0.6);
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	z-index: 2;
+	background: rgba(0, 0, 0, 0.6);
+	color: #fff;
+	border: none;
+	border-radius: 50%;
+	width: 32px;
+	height: 32px;
+	cursor: pointer;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .overflow-left {
