--- a/src/webview/components/PupilKeyboard/PupilKeyboard.css
+++ b/src/webview/components/PupilKeyboard/PupilKeyboard.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 .keyboard-container {
+	position: fixed;
+  	bottom: 0;
+  	width: 100%;
+  	left: 0;
+  	right: 0; 
+  	z-index: 1000;
 	display: flex;
 	flex-direction: column;
 }
+
